# kurs4

./: .env.example  .gitignore  Dockerfile  README.md  READMEfront.md  create_tables.py  docker-compose.yaml  load_fixtures.py  project.db  pyproject.toml  requirements.txt  run.py
project/: config.py  container.py  implemented.py  server.py  utils.py
project/dao/: director.py  genre.py  movie.py  user.py
project/dao/model/: director.py  genre.py  model.py  movie.py  user.py
project/services/: auth.py  director.py  genre.py  movie.py  user.py
project/setup/api/: __init__.py  models.py
project/tools/: security.py
project/views/: utils.py
project/views/auth/: auth.py  user.py
project/views/main/: directors.py  genres.py  movies.py
tests/: test_config.py
tests/dao/: test_genres.py
tests/services/: test_genres.py
tests/views/: test_genres_views.py
